summative.moria.Moria.scala.error
Compilation error:
Moria:5: error: not found: value isOver
      isOver = true
      ^